deployment/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lifo-queue
spec:
  selector:
    matchLabels:
      app: lifo-queue
  template:
    metadata:
      labels:
        app: lifo-queue
    spec:
      containers:
      - name: lifo-queue
        image: jerrydevin96/lifo-queue
        ports:
        - containerPort: 8080
