deployment/service.yml
apiVersion: v1
kind: Service
metadata: 
  name: lifo-service
spec:
  type: NodePort
  selector:
    app: lifo-queue
  ports:
  - port: 8080
    name: lifo-app
  - port: 8083
    name: lifo-docs
