deployment/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lifo-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /v1
        pathType: Prefix
        backend:
          service:
            name: lifo-queue
            port:
              number: 8080
      - path: /docs
        pathType: Prefix
        backend:
          service:
            name: lifo-queue
            port:
              number: 8083
